# customer-segmentation

./: .gitattributes  README.md  pyproject.toml
customer_segmentation/notebooks/: notebook.ipynb
