[tool.poetry]
name = "customer-segmentation"
version = "0.1.0"
description = ""
authors = ["Gonçalo Marques <45296009+spraxx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
kneed = "^0.8.5"
yellowbrick = "^1.5"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
